# Whirlaway

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md
benches/: folding_benchmarks.rs  poseidon2_benchmarks.rs  sumcheck_timings.rs
crates/air/: Cargo.toml
crates/air/src/: builder.rs  lib.rs  prove.rs  setup.rs  table.rs  test.rs  uni_skip_utils.rs  utils.rs  verify.rs  witness.rs
crates/algebra/: Cargo.toml
crates/algebra/src/: field_utils.rs  lib.rs  multilinear.rs  tensor_algebra.rs  tests.rs  univariate.rs  utils.rs
crates/algebra/src/ntt/: fold.rs  matrix.rs  mod.rs  ntt.rs  radix2.rs  transpose.rs  utils.rs
crates/algebra/src/pols/: arithmetic_circuit.rs  coeffs_list.rs  composed.rs  mod.rs  multilinear.rs  point.rs  transparent.rs  univariate.rs  utils.rs
crates/algebra/src/pols/circuit/: arithmetic_circuit.rs  circuit_computation.rs  mod.rs  transparent_polynomial.rs
crates/algebra/src/pols/multilinear/: dense.rs  mod.rs  sparse.rs
crates/algebra/src/pols/transparent/: custom.rs  generic.rs  mod.rs
crates/algebra/src/wavelet/: matrix.rs  mod.rs  transpose.rs
crates/arithmetic-circuit/: Cargo.toml
crates/arithmetic-circuit/src/: arithmetic_circuit.rs  circuit_computation.rs  lib.rs  sumcheck_computation.rs  transparent_polynomial.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: a_simplify_lang.rs  b_compile_intermediate.rs  c_compile_final.rs  intermediate_bytecode.rs  lang.rs  parser.rs  precompiles.rs
crates/compiler/tests/: fiat_shamir.rs  real_xmss.rs  simple.rs  xmss.rs
crates/cuda-bindings/: Cargo.toml  build.rs
crates/cuda-bindings/kernels/: finite_field.cu  keccak.cu  multilinear.cu  ntt.cu  specialized_sumcheck.txt  sumcheck.cu  sumcheck_template.txt
crates/cuda-bindings/src/: init.rs  keccak.rs  lib.rs  multilinear.rs  ntt.rs  sumcheck.rs  tests.rs  univariate_skip.rs
crates/cuda-bindings/src/cuda_pols/: coeffs_list.rs  cuda_or_cpu_pols.rs  mod.rs  multilinear.rs
crates/cuda-bindings/src/multilinear/: basis_convertion.rs  custom.rs  evaluation.rs  fold.rs  mod.rs  operations.rs
crates/cuda-engine/: Cargo.toml
crates/cuda-engine/kernels/: ff_wrapper.cu  finite_field.cu  keccak.cu  koala_bear.cu  monty_fields.cu  multilinear.cu  multilinear_evaluations.cu  ntt.cu  sumcheck_folding.cu  sumcheck_template.txt  tensor_algebra.cu  univariate_skip.cu  utils.cu
crates/cuda-engine/kernels/ntt/: bit_reverse.cu  ntt.cu  transpose.cu
crates/cuda-engine/src/: host_or_device_buffer.rs  init.rs  lib.rs  ntt_preprocessing.rs  pointers.rs  sumcheck_preprocessing.rs  utils.rs  wrapper.rs
crates/fiat-shamir/: Cargo.toml
crates/fiat-shamir/src/: lib.rs
crates/logup_star/: Cargo.toml
crates/logup_star/src/: gkr.rs  lib.rs
crates/lookup/: Cargo.toml
crates/lookup/src/: gkr.rs  lib.rs  logup_star.rs  product_gkr.rs  quotient_gkr.rs
crates/merkle-tree/: Cargo.toml  build.rs
crates/merkle-tree/src/: lib.rs  test.rs  test_cuda.rs
crates/multi_pcs/: Cargo.toml
crates/multi_pcs/src/: lib.rs  pcs.rs  ring_switch.rs
crates/pcs/: Cargo.toml
crates/pcs/src/: batch.rs  batch_pcs.rs  combinatorics.rs  lib.rs  multi_pcs.rs  packed_pcs.rs  ring_switch.rs  whir.rs
crates/rec_aggregation/src/: recursion.rs  xmss_aggregate.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck/src/: cuda.rs  custom.rs  lib.rs  mle.rs  prove.rs  prove_packed.rs  sc_computation.rs  test.rs  univariate_skip.rs  verify.rs
crates/utils/: Cargo.toml
crates/utils/src/: constraints_checker.rs  constraints_folder.rs  cuda_reader.rs  display.rs  field.rs  keccak.rs  lib.rs  misc.rs  multilinear.rs  packed_constraints_folder.rs  point.rs  poseidon2.rs  poseidon_koala_bear.rs  univariate.rs  wrappers.rs
crates/vm/: Cargo.toml  TECHNICAL_NOTES.md  TODO.md
crates/vm/src/: air.rs  bytecode.rs  compiler.rs  dot_product_air.rs  grammar.pest  instruction_encoder.rs  lang.rs  lib.rs  parser.rs  precompiles.rs  recursion.rs  runner.rs  test.rs  tracer.rs
crates/vm/src/bytecode/: bytecode.rs  final_bytecode.rs  high_level.rs  intermediate_bytecode.rs  isa_air.md  low_level.rs  mod.rs
crates/vm/src/compiler/: a_simplify_lang.rs  b_compile_intermediate.rs  c_compile_final.rs  mod.rs  phase_0.rs  phase_1.rs  phase_2.rs  phase_3.rs
crates/vm/src/examples/: aggregate.rs  aggregate.vm  mod.rs
crates/vm/src/validity_proof/: common.rs  mod.rs  prove_execution.rs  verify_execution.rs
crates/vm/src/validity_proof/prove/: execution_trace.rs  mod.rs  poseidon_tables.rs  prove_execution.rs
crates/vm/src/validity_proof/verify/: mod.rs  verify_execution.rs
crates/whir/: Cargo.toml
crates/whir/src/: committer.rs  domain.rs  fs_utils.rs  lib.rs  parameters.rs  prover.rs  test.rs  utils.rs  verifier.rs
crates/whir/src/ntt/: mod.rs  utils.rs  wavelet.rs
crates/whir/src/poly_utils/: coeffs.rs  fold.rs  mod.rs
crates/whir/src/whir/: committer.rs  fs_utils.rs  mod.rs  parameters.rs  prover.rs  verifier.rs
crates/xmss/: Cargo.toml
crates/xmss/src/: lib.rs  wots.rs  xmss.rs
crates/xmss/tests/: test_xmss.rs
crates/zk_vm/src/: execution_trace.rs  poseidon_tables.rs  recursion.rs
docs/: bibliography.bib  main.tex
docs/benchmark_graphs/: main.py
src/: bench_field.rs  main.rs
src/examples/: mod.rs  poseidon2.rs  prove_poseidon2.rs
src/examples/poseidon2/: columns.rs  constants.rs  generation.rs  mod.rs  vectorized.rs
src/examples/poseidon2_koala_bear/: air.rs  mod.rs
