[package]
name = "whirlaway"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Local
whir = { path = "crates/whir" }
fiat-shamir = { path = "crates/fiat-shamir" }
algebra = { path = "crates/algebra" }
merkle-tree = { path = "crates/merkle-tree" }
air = { path = "crates/air" }
sumcheck = { path = "crates/sumcheck" }
arithmetic-circuit = { path = "crates/arithmetic-circuit" }
utils = { path = "crates/utils" }

# External
rand = "0.9.1"
sha3 = "0.10.8"
rayon = "1.5.1"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }

[dependencies]
whir.workspace = true
fiat-shamir.workspace = true
algebra.workspace = true
air.workspace = true
p3-field.workspace = true
tracing.workspace = true
p3-koala-bear.workspace = true
p3-baby-bear.workspace = true
rand.workspace = true
p3-poseidon2.workspace = true
rayon.workspace = true
p3-matrix.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
arithmetic-circuit.workspace = true
utils.workspace = true