[package]
name = "whirlaway"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Local
fiat-shamir = { path = "crates/fiat-shamir" }
algebra = { path = "crates/algebra" }
merkle-tree = { path = "crates/merkle-tree" }
air = { path = "crates/air" }
sumcheck = { path = "crates/sumcheck" }
utils = { path = "crates/utils" }

# External
rand = "0.9.1"
sha3 = "0.10.8"
rayon = "1.5.1"
bincode = { version = "2.0.1", features = ["serde"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "ad4fd24" }

whir-p3 = { git = "https://github.com/tcoratger/whir-p3" }

[dependencies]
fiat-shamir.workspace = true
algebra.workspace = true
air.workspace = true
p3-field.workspace = true
tracing.workspace = true
p3-koala-bear.workspace = true
p3-baby-bear.workspace = true
p3-poseidon2.workspace = true
rand.workspace = true
p3-poseidon2-air.workspace = true
p3-matrix.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
whir-p3.workspace = true
p3-uni-stark.workspace = true
# p3-goldilocks.workspace = true