[package]
name = "air"
version.workspace = true
edition.workspace = true

[dependencies]
algebra.workspace = true
p3-field.workspace = true
tracing.workspace = true
fiat-shamir.workspace = true
sumcheck.workspace = true
utils.workspace = true
whir.workspace = true
rand.workspace = true
rayon.workspace = true
arithmetic-circuit.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true
rand.workspace = true
