[package]
name = "algebra"
version.workspace = true
edition.workspace = true

[dependencies]
rayon.workspace = true
rand.workspace = true
# tracing.workspace = true
p3-field.workspace = true
utils.workspace = true
p3-matrix.workspace = true
p3-dft.workspace = true
arithmetic-circuit.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true

