[package]
name = "algebra"
version.workspace = true
edition.workspace = true

[dependencies]
rayon.workspace = true
rand.workspace = true
# tracing.workspace = true
p3-field.workspace = true
utils.workspace = true
arithmetic-circuit.workspace = true
whir-p3.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true

