[package]
name = "cuda-bindings"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
tracing.workspace = true
p3-field.workspace = true
utils.workspace = true
cuda-engine.workspace = true
p3-koala-bear.workspace = true

[dev-dependencies]
rayon.workspace = true
rand.workspace = true
algebra.workspace = true
arithmetic-circuit.workspace = true