[package]
name = "cuda-bindings"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
p3-field.workspace = true
utils.workspace = true
cuda-engine.workspace = true
tracing.workspace = true

[dev-dependencies]
rayon.workspace = true
rand.workspace = true
algebra.workspace = true
p3-koala-bear.workspace = true
arithmetic-circuit.workspace = true
p3-dft.workspace = true
p3-matrix.workspace = true