[package]
name = "merkle-tree"
version.workspace = true
edition.workspace = true

[dependencies]
algebra.workspace = true
rayon.workspace = true
p3-field.workspace = true
sha3.workspace = true
tracing.workspace = true

[target.'cfg(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr"))'.dependencies]
ahash = { version = "0.8", default-features = false}

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64", target_has_atomic = "ptr")))'.dependencies]
fnv = { version = "1.0", default-features = false }
