[package]
name = "merkle-tree"
version.workspace = true
edition.workspace = true

[dependencies]
rayon.workspace = true
sha3.workspace = true
tracing.workspace = true
cuda-engine.workspace = true
cuda-bindings.workspace = true
utils.workspace = true
cudarc.workspace = true

[dev-dependencies]
rand.workspace = true