[package]
name = "sumcheck"
version.workspace = true
edition.workspace = true

[dependencies]
fiat-shamir.workspace = true
algebra.workspace = true
p3-field.workspace = true
tracing.workspace = true
arithmetic-circuit.workspace = true
utils.workspace = true
cuda-engine.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true
rand.workspace = true