[package]
name = "utils"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
rayon.workspace = true
sha3.workspace = true
p3-air.workspace = true
p3-matrix.workspace = true
bincode.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true
