[package]
name = "whir"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
fiat-shamir.workspace = true
algebra.workspace = true
merkle-tree.workspace = true
p3-field.workspace = true
sumcheck.workspace = true
tracing.workspace = true
cuda-engine.workspace = true
arithmetic-circuit.workspace = true
utils.workspace = true